force-app/main/default/objects/Transaction_BigData__b/Transaction_BigData__b.object-meta.xml
<CustomObject>
    <label>Transaction_BigData</label>
    <pluralLabel>Transactions</pluralLabel>
</CustomObject>