force-app/main/default/objects/Transaction_BigData__b/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <label>Created DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>