force-app/main/default/objects/Transaction_BigData__b/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>