force-app/main/default/objects/Transaction_BigData__b/fields/UPI_ID__c.field-meta.xml
<CustomField>
    <fullName>UPI_ID__c</fullName>
    <label>UPI-ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>